<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

	<LinearLayout 
	    android:layout_width="280dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:orientation="vertical" >
    
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="2"
        android:orientation="vertical">
    
        
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/child_id"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/child_name"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    
    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/gender"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textViewID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
        android:text="@string/content_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/content_id"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/content_id"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    
    </GridLayout>
    
    <View
            android:layout_width="wrap_content"
            android:layout_height="10dp" />
    
    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/observation_session"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/content_id"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp" />
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pri_diagnosis"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    
    <TextView
        android:id="@+id/textViewPriDiag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_pri"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <View
            android:layout_width="wrap_content"
            android:layout_height="10dp" />
    
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sec_diagnosis"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textViewSecDiag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_sec"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <View
            android:layout_width="wrap_content"
            android:layout_height="10dp" />
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remarks"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textViewRemarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_remarks"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <View
            android:layout_width="wrap_content"
            android:layout_height="10dp" />
    
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inspector"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textViewInspector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_coder"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <View
            android:layout_width="wrap_content"
            android:layout_height="10dp" />
    
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/venue"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textViewVenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_venue"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <View
            android:layout_width="wrap_content"
            android:layout_height="10dp" />
    
    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textViewActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_activity"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <View
            android:layout_width="wrap_content"
            android:layout_height="10dp" />
    
    <GridLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="2"
        android:orientation="vertical">
    
    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/no_adults"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/no_children"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textViewNoAdults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/content_adults"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textViewNoChildren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/content_children"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    </GridLayout>
    
    <View
            android:layout_width="wrap_content"
            android:layout_height="10dp" />
    
    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start_btn" />
    
	</LinearLayout>
</ScrollView>
