<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="10dp">
    
    <!-- Large TimerView (top | center) -->
    
    <TextView android:id="@+id/timerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/timeStart"
        android:layout_gravity="top|center"/>
    
    <!-- spacing divider -->

    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp" />
    
    <!-- Section field 1: Engagement -->
    
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="4"
        android:columnCount="2"
        android:layout_gravity="center">
        
        <TextView android:id="@+id/Heading1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="16sp"
	        android:textStyle="bold"
	        android:text="@string/heading1"
	        style="?android:attr/listSeparatorTextViewStyle" 
	        android:layout_row="0"
	        android:layout_column="0"
	        android:layout_columnSpan="2"/>
    
    	<Button android:id="@+id/actEngage_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="12sp"
	        android:tag="1"
	        android:text="@string/actEngage"
	        android:layout_row="1"
	        android:layout_column="0"/>
    
    	<Button 
    	    android:id="@+id/actNonEngage_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="12sp"
	        android:tag="2"
	        android:text="@string/actNonEngage" 
	        android:layout_row="1"
	        android:layout_column="1"/>
    	
    	<Button android:id="@+id/pasvEngage_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="12sp"
	        android:tag="3"
	        android:text="@string/pasvEngage"
	        android:layout_row="2"
	        android:layout_column="0"/>
	    
	    <Button android:id="@+id/pasvNonEngage_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="12sp"
	        android:tag="4"
	        android:text="@string/pasvNonEngage"
	        android:layout_row="2"
	        android:layout_column="1"/>
	    
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_row="3"
	        android:layout_column="0"
	        android:orientation="horizontal">
	    	
	        <TextView android:id="@+id/flag_label"
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:textSize="14sp"
		        android:textStyle="bold"
		        android:text="@string/time_limit" />
	        
		    <TextView android:id="@+id/flag_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:textSize="14sp" />
	        
	    </LinearLayout>
	    
	     <Button android:id="@+id/flag_btn"
	        android:layout_width="80dp"
	        android:layout_height="wrap_content"
	        android:textSize="12sp"
	        android:text="@string/flag"
	        android:layout_row="3"
	        android:layout_column="1"
	        android:onClick="onCheckboxClicked"/>
        
    </GridLayout>
    
    <!-- spacing divider -->

    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp" />
    
    <!-- Section field 2: Prompts -->
    <LinearLayout
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginRight="50dp"
    		android:layout_gravity="center"
    	android:orientation="vertical">
        
        <LinearLayout
        	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal" >
    		
	        <TextView android:id="@+id/Heading2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="16sp"
		        android:textStyle="bold"
		        android:text="@string/heading2"
		        style="?android:attr/listSeparatorTextViewStyle" 
		        android:clickable="true"
		        android:onClick="onChkbxClick"/>
	    
	    	<CheckBox android:id="@+id/chkbox_yes"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" />
	    	
	    </LinearLayout>
        
    	<EditText
	        android:id="@+id/addText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="15dp"
	        android:ems="10"
	        android:visibility="gone">
	    </EditText>
    	
    </LinearLayout>    

    <!-- spacing divider -->
    
    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp" />
    
    <!-- Section field 3: Interactions -->
    
    <LinearLayout
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:layout_gravity="center">
    
	    <TextView android:id="@+id/Heading3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="16sp"
	        android:textStyle="bold"
	        android:layout_marginLeft="10dp"
	        android:text="@string/heading3"
	        style="?android:attr/listSeparatorTextViewStyle" />
	    
	    <RadioGroup 
	        android:id="@+id/radioGrp"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:layout_marginLeft="5dp"
	    	android:gravity="center">
		    
	        <RadioButton 
	            android:id="@+id/interact1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="5dp"
		        android:textSize="12sp"
		        android:text="@string/interact1" />
	    
		    <RadioButton
		        android:id="@+id/interact2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="5dp"
		        android:textSize="12sp"
		        android:text="@string/interact2" />
		    
		    <RadioButton 
	            android:id="@+id/interact3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginRight="5dp"
		        android:textSize="12sp"
		        android:text="@string/interact3" />
	    
		    <RadioButton
		        android:id="@+id/interact4"
		        android:layout_width="wrap_content"
		        android:layout_height="fill_parent"
		        android:text="@string/interact4"
		        android:textSize="12sp" />
		    
		</RadioGroup>
    
    </LinearLayout>
    <!-- spacing divider -->

    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp" />
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        style="?android:attr/buttonBarStyle">
        
	    <Button
	        android:id="@+id/btnPlayPause"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button1"
	        android:textSize="14sp" />
	    
	    <Button
	        android:id="@+id/btnStopReset"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:text="@string/button2"
	        android:textSize="14sp" />

    </LinearLayout>
    
</LinearLayout>